Fixed tag div size with overflow - Luca Azmanov

--- a/front-end/src/app/create-exercise/create-exercise.page.scss
+++ b/front-end/src/app/create-exercise/create-exercise.page.scss
@@ -22,6 +22,12 @@
   margin-right: auto;
 }
 
+#tags{
+  display: block;
+  height: 80px;
+  overflow-y: scroll;
+}
+
 #selected{
   display: none;
 }
